fix: overflow problems

--- a/docs/src/sass/main/content/_main-content.sass
+++ b/docs/src/sass/main/content/_main-content.sass
@@ -1,6 +1,7 @@
 #show-btn
   display: block
   
+  
 .main__cinemas
   padding: 2.25vw 0
 
@@ -42,8 +43,15 @@
 
 
 .main__cinemas__list__body__slider
+  overflow-x: hidden	
+  overflow-x: -moz-scrollbars-none
+
+  overflow-y: hidden	
+  overflow-y: -moz-scrollbars-none
+
   padding: 0 50px
   position: relative
+
 
 
 .main__cinemas__list__body__slider__contents
